--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -9,7 +9,7 @@
       rgba(17, 24, 39, 0.8),
       rgba(17, 24, 39, 0.9)
     ),
-    url("https://media.licdn.com/dms/image/v2/D4E12AQF6F7ar7bGOyg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1692002701608?e=2147483647&v=beta&t=WlfCOE7SxfSU9LzpkA4PRFp-eaAVXTlC7T3KEd55Sds");
+    url("https://moewalls.com/wp-content/uploads/2023/04/manga-anime-collection-thumb.jpg");
   background-size: cover;
   background-position: center;
   height: 750px;
